updated_file_notebook

--- a/Tweet_analysis.ipynb
+++ b/Tweet_analysis.ipynb
@@ -92,7 +92,7 @@
     "from nltk.tokenize import word_tokenize, RegexpTokenizer\n",
     "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
     "from nltk import FreqDist\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "%matplotlib inline \n",
     "import warnings\n",
@@ -278,8 +278,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6eb743a4-3bab-4512-aee3-6a1a37bdf4d8",
+   "metadata": {},
+   "source": [
+    "* This class consists of:\n",
+    "  1. Data overview(basic info about the dataset)\n",
+    "  2. Checking of missing values in the dataset, where in column `emotion_in_tweet_is_directed_at` the missing values  counted were 5802, while in     `tweet_text` column  missing vals counted is 1\n",
+    "  3. Checking of Duplicates and found 22 of them in number\n",
+    "  4. A  barh graph showing the count distribution of tweet sentiments  in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4fa4302d-b8ee-4139-8745-15ca2a84aec8",
    "metadata": {},
    "outputs": [],
@@ -332,29 +344,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "90bc75c3-1069-49c4-97d6-8d496507bcc1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Data_exploring at 0x2132b336c00>"
+       "<__main__.Data_exploring at 0x23dcd0ef050>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# initiating the class \n",
     "EDA = Data_exploring(Tweets_df)\n",
     "EDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "7cb6cdad-6b41-4f1b-983e-7a2cd6191594",
    "metadata": {},
    "outputs": [
@@ -383,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b3563908-fd95-40e2-830d-e9328f60a7d1",
    "metadata": {},
    "outputs": [
@@ -400,12 +413,13 @@
     }
    ],
    "source": [
+    "#  Missing values\n",
     "EDA.Missing_value_check()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "09f075e5-93b8-4778-a67c-09c87e0da75b",
    "metadata": {},
    "outputs": [
@@ -419,12 +433,13 @@
     }
    ],
    "source": [
+    "# Duplicate values\n",
     "EDA.Duplicated_values_check()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fb08719a-8ceb-49ed-98be-5a0688ca45e6",
    "metadata": {},
    "outputs": [
@@ -453,6 +468,7 @@
     }
    ],
    "source": [
+    "# Distribution of tweet sentiments\n",
     "EDA.sentiment_distribution()"
    ]
   },
@@ -461,8 +477,10 @@
    "id": "15abf3e1-b276-4a6d-b5fa-0f272928e877",
    "metadata": {},
    "source": [
-    "* The data sets nedds further cleaning since, it has  22(duplicates), the `emotion_in_tweet_is_directed_at` columns as 5802 missing values and the`tweet_text` test has 1 missing value.\n",
-    "*  So far, the data cannot be used for modelling since it's not ready. Let's implement the cleaning and preprocessing methods for it to be fit for modelling. "
+    "*  According to the  diagram above the highest sentiment is `no emotion toward the brand or product` followed by `positive emotion`.\n",
+    "*  This will be our target variable, and it requires  cleaning into 3 categories (positive, negative, neutral/no emotion)\n",
+    "* The dataset needs further cleaning since, it has  22(duplicates), the `emotion_in_tweet_is_directed_at` columns as 5802 missing values and the`tweet_text` test has 1 missing value.\n",
+    "*  So far, the data cannot be used for modelling since it's not ready. Let's implement the cleaning and preprocessing methods to make it fit for modelling. "
    ]
   },
   {
@@ -482,8 +500,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1be7cee8-b8d9-45e7-bae1-cbeb94d22d4a",
+   "metadata": {},
+   "source": [
+    "* This class contains:\n",
+    "*  **Basic cleaning**\n",
+    " 1.  The removal of duplicates processes from the dataframe\n",
+    " 2.  Filling of missing values  by  dropping subset row with  missing value and using a placeholder **Unknown**.\n",
+    "*  **Text preprocessing**\n",
+    "* 3. cleaning text by removing the non-word items like(#, @, !!, etc)\n",
+    "  4. Tokenize text by changing sentences into sepearte words.\n",
+    "  5. removing stopwords\n",
+    "  6. and lemmatizing the tokens\n",
+    "* **Visualization**\n",
+    "* 7. A histogram plotting the tweet length distribution.\n",
+    "  8. A bar graph plotting the  the word frequency distribution."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "9d57936e-dc48-433d-bfbd-882d89283bac",
    "metadata": {},
    "outputs": [],
@@ -621,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "11d7add9-711f-46db-8504-8147f97f563a",
    "metadata": {},
    "outputs": [],
@@ -637,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "ffb2fe90-ad1f-4844-aa31-0377ca1f1929",
    "metadata": {},
    "outputs": [
@@ -657,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "41c47144-00fd-43c9-bf69-f78c6d6defbb",
    "metadata": {},
    "outputs": [
@@ -677,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "33d5c7ed-d36f-4b17-8ac5-d826bb3de14f",
    "metadata": {},
    "outputs": [
@@ -698,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "097df0fe-b212-4ed8-8e63-c8fe042a7435",
    "metadata": {},
    "outputs": [
@@ -720,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "b5e305a8-5047-4f1e-8635-c1f1a7ce8d00",
    "metadata": {},
    "outputs": [
@@ -743,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "ab200a81-4add-4bb7-a89b-abb9ba690c63",
    "metadata": {},
    "outputs": [
@@ -776,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "68a33669-5985-46af-8f7b-1e53f7a32c93",
    "metadata": {},
    "outputs": [
@@ -807,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "08bbb0e3-3510-4231-abd6-26b3da211475",
    "metadata": {},
    "outputs": [
@@ -823,13 +860,14 @@
     }
    ],
    "source": [
+    "# A bar plot showing the word frequency\n",
     "from collections import Counter\n",
     "cleaner.plot_word_frequency(top_n=15)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "5d9cd20b-ecf6-4d2a-a3b8-a39cf7249f78",
    "metadata": {},
    "outputs": [
@@ -936,7 +974,7 @@
        "4  [great, stuff, fri, sxsw, marissa, mayer, goog...           108  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "3cf139f6-267f-4414-85c6-2f996f1e4a8d",
    "metadata": {},
    "outputs": [
@@ -997,7 +1035,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "5b7d9dec-6ee8-41b9-ae9b-1ead5040e21f",
    "metadata": {},
    "outputs": [],
@@ -1113,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "5555a5ee-30f0-4ad2-888d-f7464fa2ecb6",
    "metadata": {},
    "outputs": [],
@@ -1130,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "96cdd0af-4dae-4f6a-8445-07932691871c",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "5c76c355-3bce-4dd5-912b-97fc2e570863",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "6c943777-2383-49c8-b31d-aa81c15469e4",
    "metadata": {},
    "outputs": [
@@ -1399,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "43db0e84-4669-4cc0-aecf-211c4632235a",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "ac91509f-8f4b-4bfa-9bf4-149c50d58bb9",
    "metadata": {},
    "outputs": [
@@ -1442,8 +1480,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6691c9e-48fc-47f7-9f73-c5537a48ad27",
+   "metadata": {},
+   "source": [
+    "#### Which of these two companies, Apple or Google, receives more positive or negative sentiment in tweets?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "38c9632c-6287-46a0-b27a-23133c7b4ad5",
    "metadata": {},
    "outputs": [
@@ -1463,8 +1509,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb313a88-eda1-4b9f-aeb5-3c69805ba6a8",
+   "metadata": {},
+   "source": [
+    "*  The combined bar graph shows that the Apple brand receive more positive  and negative sentiments than the  google brand."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "bf131f4a-bbba-443a-b862-89caf4a14387",
    "metadata": {},
    "outputs": [
@@ -1590,7 +1644,7 @@
        "4         Positive       Google  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,6 +1653,30 @@
     "# Get the updated DataFrame\n",
     "final_df = features.get_features()\n",
     "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "46686064-f8ab-4058-9ef4-86121eff15d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['tweet_text', 'emotion_in_tweet_is_directed_at',\n",
+       "       'is_there_an_emotion_directed_at_a_brand_or_product', 'tokens',\n",
+       "       'tweet_length', 'mapped_sentiment', 'mapped_brand', 'clean_text'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.columns"
    ]
   },
   {
@@ -1612,49 +1690,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0190b444-7cc8-41af-a975-735c1d8685d0",
-   "metadata": {},
-   "source": [
-    " ## BI GRAMS "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b58b9193-2d2a-4aba-b6ee-a21dafa30c2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8772a1d7-1ef8-43fe-b9a7-c6f05dbc17fe",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "2b39e3c8-072b-4b52-9d4e-3d398179c902",
    "metadata": {},
    "source": [
-    "## VECTORIZATION OF DATA "
+    "## VECTORIZATION OF DATA  AND BI GRAMS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2d8173e-2b23-4a7a-a9eb-4f6083de16d5",
+   "execution_count": 63,
+   "id": "09ba7fdd-8c0d-479b-aba2-a8f4b73ab4ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TF-IDF bigram matrix shape: (9070, 5000)\n",
+      "Example bigram features:\n",
+      "['ab sxsw' 'able afford' 'able attend' 'able ipad' 'abt sxsw'\n",
+      " 'academy bringing' 'acc abc' 'acc ballroom' 'access acoustic'\n",
+      " 'access google' 'accessibility sxsw' 'accidentally took'\n",
+      " 'according google' 'accordion toodamnlucky' 'account iphone'\n",
+      " 'accuracy yrs' 'aclu google' 'aclu party' 'aclu sxsw' 'acoustic solo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize TF-IDF Vectorizer for bigrams\n",
+    "tfidf_vectorizer = TfidfVectorizer(\n",
+    "    ngram_range=(2, 2),   # bigrams only\n",
+    "    max_features=5000,    # limit number of features\n",
+    "    min_df=2,             # ignore infrequent terms\n",
+    "    max_df=0.8,           # ignore overly common terms\n",
+    "    stop_words='english'  # remove English stopwords\n",
+    ")\n",
+    "\n",
+    "# Fit and transform the tweet text column\n",
+    "X_tfidf_bigrams = tfidf_vectorizer.fit_transform(final_df['tweet_text'])\n",
+    "\n",
+    "# Inspect results\n",
+    "print(\"TF-IDF bigram matrix shape:\", X_tfidf_bigrams.shape)\n",
+    "print(\"Example bigram features:\")\n",
+    "print(tfidf_vectorizer.get_feature_names_out()[:20])\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76451032-1280-498e-9ae4-4b99ef2c7b9f",
+   "cell_type": "markdown",
+   "id": "1ae92572-14f5-4363-8820-ce7a30303d98",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## NLP MODELS"
+   ]
   },
   {
    "cell_type": "code",
